--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/4086eb511f.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -32,6 +36,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      type="text/scss"
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
     />
   </head>
   <body class="mat-typography">
