--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,10 @@
       type="text/scss"
       href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
