--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.boomcdn.com/libs/owl-carousel/2.3.4/assets/owl.carousel.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+
     <script
       src="https://kit.fontawesome.com/4086eb511f.js"
       crossorigin="anonymous"
@@ -37,14 +43,12 @@
       href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css" />
+    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css" />
     <link
       rel="stylesheet"
       type="text/scss"
       href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css"
-      rel="stylesheet"
     />
   </head>
   <body class="mat-typography">
@@ -64,5 +68,7 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    <script src="jquery.min.js"></script>
+    <script src="owlcarousel/owl.carousel.min.js"></script>
   </body>
 </html>
